Bike list bug and hiding scrollbar

--- a/frontend/ride-track/src/index.css
+++ b/frontend/ride-track/src/index.css
@@ -56,3 +56,12 @@ button {
   --red: #ff4400;
   --orange: #ff7b00;
 }
+
+div::-webkit-scrollbar {
+  display: none;
+}
+
+div {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
